--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -110,9 +110,9 @@
       <h1 class="contact">Contact Us</h1>
       <br>
       <address>
-        <a href="mailto:GamesDirector@strippals.com" class="mail">GamesDirector@strippals.com</a><br>
-        <a href="mailto:admin@strippals.com" class="mail">admin@strippals.com</a><br>
-        <a href="mailto:help@strippals.com" class="mail">help@strippals.com</a>
+        <a href="mailto:strippals@gmail.com" class="mail">GamesDirector@strippals.com</a><br>
+        <a href="mailto:strippals@gmail.com" class="mail">admin@strippals.com</a><br>
+        <a href="mailto:strippals@gmail.com" class="mail">help@strippals.com</a>
       </address>
     </div>
   </div>
