--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -618,7 +618,7 @@ a.active{
     .row--for-card {
       margin-bottom: 40px;
       margin-left: 0;
-      margin-left: 0;
+      margin-right: 0;
       .fullcard {
         .image--for-card {
           img {
