--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,22 +52,22 @@
         </p>
       </div>
       <div class="button--for-card">
-        <a href="btn btn-info">VIEW VIDEO HERE</a>
+        <a href="https://www.youtube.com/watch?v=fNYY8PjDllw">VIEW VIDEO HERE</a>
       </div>
     </div>
     <div class="col-md-4 col-12 fullcard">
       <div class="image--for-card">
         <%= image_tag 'home_img_02.jpg', width: '300', height: '250' %>
       </div>
-      <div class="title--for-card">
+      <div class="title--for-card" style="transition: all 0.5s">
         <p>APP INSTRUCTIONS</p>
       </div>
       <div class="description--for-card">
         <p>Learn how to play the game here. It require no skill and you only need luck and the fall of the cards to win
         </p>
       </div>
-      <div class="button--for-card">
-        <a href="btn btn-info">HOW TO PLAY</a>
+      <div class="button--for-card" style="transition: all 0.5s">
+      <%= link_to "HOW TO PLAY", image_url('GameRules.pdf') %>
       </div>
     </div>
     <div class="col-md-4 col-12 fullcard">
@@ -82,8 +82,8 @@
           conditions will result in disiplinary action.
         </p>
       </div>
-      <div class="button--for-card">
-        <a href="btn btn-info">TERMS</a>
+      <div class="button--for-card" style="transition: all 0.5s">
+        <%= link_to "TERMS", image_url('Terms.pdf') %>
       </div>
     </div>
   </div>
