--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,7 +41,7 @@
   <div class="row row--for-card">
     <div class="col-md-4 col-12 fullcard">
       <div class="image--for-card">
-        <%= image_tag 'home_img_01.jpg', width: '300', height: '250' %>
+        <%= image_tag 'home_img_01.jpg', height: '250'%>
       </div>
       <div class="title--for-card">
         <p>STRIP ME NAKED APP</p>
@@ -60,7 +60,7 @@
     </div>
     <div class="col-md-4 col-12 fullcard">
       <div class="image--for-card">
-        <%= image_tag 'home_img_02.jpg', width: '300', height: '250' %>
+        <%= image_tag 'home_img_02.jpg', height: '250' %>
       </div>
       <div class="title--for-card" style="transition: all 0.5s">
         <p>APP INSTRUCTIONS</p>
@@ -77,7 +77,7 @@
    </div>
     <div class="col-md-4 col-12 fullcard">
       <div class="image--for-card">
-        <%= image_tag 'home_img_03.jpg', width: '300', height: '250' %>
+        <%= image_tag 'home_img_03.jpg', height: '250' %>
       </div>
       <div class="title--for-card">
         <p>SITE TERMS & CONDITIONS</p>
