--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -8,7 +8,9 @@
         </div>
       </div>
       <div class="row upper-text">
-        <h1 class="upper-h1 col-12 text-center">- Strip Poker site for AMATEURS -</h1>
+        <span class="upper-h1 col-12 text-center">
+          <h1>- Strip Poker site for AMATEURS -</h1>
+        </span>
         <p class="upper-paragraph text-center">Listed below are key elements for our site and a list of charges for our players. For as
           <span style="color:#e82424">little as 2c a minute with the total game cost about 20c,</span> players can be assured of getting
           value for money. To be fair to players who play regularly their rate is even cheaper.</p>
