change text color

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand/logo -->
 <!--  <h3 class="logo">Strip Me Naked</h3>-->
-  <a class="logo" href="<%= root_path %>">Strip Me Naked</a>
+  <a class="logo home-link" href="<%= root_path %>">Strip Me Naked</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
