change game link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -135,7 +135,7 @@
                         play for commodities, this is how it was played some 200 years ago.
                         If you wish to learn of other modes to play please contact us.</p>
 <!--                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>-->
-                        <a href="mailto:strippals@gmail.com" style="color:#F07C00;">Games Master:</a>
+                        <%= link_to "Games Master:", games_master_index_path, style: 'color:#F07C00' %>
                     </div>
                   </div>
                 </div>
