tab header changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="col-md-9 col-sm-8 col-12">
-                      <h3 class="">ADULT ONLY ENTERTAINMENT</h3>
+                      <h3 class="first-tab-header">ADULT ONLY ENTERTAINMENT</h3>
                       <p style="font-family: 'Eras Demi ITC'; color: gray;">This site is for adult entertainment and
                         persons under the age of 18 must not enter.
                         The game does involve nudity which may also be unsuitable to same adults.
@@ -146,7 +146,7 @@
                       <%= image_tag 'croped.png', class: 'img-fluid' %>
                     </div>
                     <div class="col-md-9 col-sm-8 col-12">
-                      <h3 class="">USER PAY SITE</h3>
+                      <h3 class="first-tab-header">USER PAY SITE</h3>
                       <p style="font-family: 'Eras Demi ITC'; color: gray;">To be fair to all players this is a user pay
                         site - that is the more you use the site the less it will cost you.
                         While every endeavour is made to accommodate players of all interests it is reccommended that
