--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -20,6 +20,7 @@ body
 {
   overflow-x: hidden;
 }
+
 @media only screen and (min-width: 320px) {
   .colcont{
     line-height: 1;
@@ -31,6 +32,13 @@ body
   .ntb {
     width: 100% !important;}
 }
+
+@media only screen and (max-width: 400px) {
+  .first-tab-header{
+    font-size: 14px;
+  }
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1400px){
   .icondiv{
     top: -427px !important;
