--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,13 +6,13 @@
   </div>
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="form-group">
-    <div class="col-lg-10 col-lg-offset-2">
-       <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-    </div>
-  </div>
-<% end -%>
+<%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<!--  <div class="form-group">-->
+<!--    <div class="col-lg-10 col-lg-offset-2">-->
+<!--       <%#= link_to "Sign up", new_registration_path(resource_name) %><br />-->
+<!--    </div>-->
+<!--  </div>-->
+<%# end -%>
 
 <%#- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
 <!--  <%#= link_to "Forgot your password?", new_password_path(resource_name) %><br />-->
