setting up database structure

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
   <!--          <em><p class="card-title" style="font-style: oblique;font-size: x-large;-->
   <!--              font-family: 'myfont';font-weight: 600;">STRIP ME NAKED APP</p></em>-->
   <!--          <p class="card-text">Watch how to play the app video here.-->
-  <!--            The video tells of the origin of this 200 year old game.-->
+  <!--            The video tells of the origin of this 200 year old games.-->
   <!--            It is s free app catering for all plateforms.</p>-->
   <!--          <a href="https://www.youtube.com/watch?v=fNYY8PjDllw" class="btn btn-primary" style="height:55px;margin-top: 22px;width: 180px;">-->
   <!--            <div style="padding-top:10px; padding-right:8px;">VIEW VIDEO HERE</div>-->
@@ -258,7 +258,7 @@
 <!--                <div class="col-md-7 col-sm-6 colcont">-->
 <!--                  <h3 class="hd">ADULT ONLY ENTERTAINMENT</h3><br>-->
 <!--                  <p class="prgraph" style="font-family: 'Eras Demi ITC'; color: gray;">This site is for adult entertainment and persons under the age of 18 must not enter.-->
-<!--                    The game does involve nudity which may also be unsuitable to same adults.-->
+<!--                    The games does involve nudity which may also be unsuitable to same adults.-->
 <!--                    If nudity offends please advice your playing partners and arrange another mode of betting..</p>-->
 <!--                  <p class="prgraph" style="font-family: 'Eras Demi ITC';  color: gray; padding-top: 40px;">One suggestion the Games Master has is to play for commodities, this is how it was played some 200 years ago.-->
 <!--                    If you wish to learn of other modes to play please contact us.</p>-->
@@ -276,7 +276,7 @@
 <!--                  <h3 class="hd">USER PAY SITE</h3><br>-->
 <!--                  <p class="prgraph" style="font-family: 'Eras Demi ITC'; color: gray;">To be fair to all players this is a user pay site - that is the more you use the site the less it will cost you.-->
 <!--                    While every endeavour is made to accommodate players of all interests it is reccommended that players stay within their budget and do not over spend. </p><br>-->
-<!--                  <p class="prgraph" style=" color: gray; padding-top: 40px;">For as little as 2c a minute with the total game cost about 20c, players can be assured of getting value for money.</p>-->
+<!--                  <p class="prgraph" style=" color: gray; padding-top: 40px;">For as little as 2c a minute with the total games cost about 20c, players can be assured of getting value for money.</p>-->
 <!--                  <a class="prgraph" href="#" target="_blank" style="color:#F07C00;">ENTER HERE</a>-->
 <!--                </div>-->
 <!--              </div>-->
