--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -74,102 +74,7 @@
     </div>
   </div>
   <hr>
-  <div class="row">
-    <div class="col-lg-3 col-md-6 col-12 data-panels">
-      <div class="card green-card">
-        <div class="card-header green-panel">
-          Ace Of Spades
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Playing Time</li>
-          <li class="list-group-item">5 games
-            <br>
-            <strong>US$0.50</strong>
-          </li>
-          <li class="list-group-item">
-            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
-              <%= image_tag 'btn_buynowCC_LG.gif'%>
-            </a>
-
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-12 data-panels">
-      <div class="card un-card">
-        <div class="card-header un-panel">
-          King Of Spades
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Playing Time</li>
-          <li class="list-group-item">3 games
-            <br>
-            <strong>US$0.50</strong>
-          </li>
-          <li class="list-group-item">
-<!--            <img src="btn_buynowCC_LG.gif" alt="">-->
-            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
-              <%= image_tag 'btn_buynowCC_LG.gif'%>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-12 data-panels">
-      <div class="card blue-card">
-        <div class="card-header blue-panel">
-          Queen Of Spades
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Playing Time</li>
-          <li class="list-group-item">2 games
-            <br>
-            <strong>US$0.50</strong>
-          </li>
-          <li class="list-group-item">
-<!--            <img src="btn_buynowCC_LG.gif" alt="">-->
-            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">
-               <%= image_tag 'btn_buynowCC_LG.gif'%>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-12 data-panels">
-      <div class="card dark-card">
-        <div class="card-header dark-panel">
-          Jack Of Spades
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Playing Time</li>
-          <li class="list-group-item">1 games
-            <br>
-            <strong>US$0.50</strong>
-          </li>
-          <li class="list-group-item">
-<!--            <a href="https://www.paypal.com/cgi-bin/webscr" target="_blank">-->
-              <%#= image_tag 'btn_buynowCC_LG.gif'%>
-<!--            </a>-->
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="tutor@pmarpl.com.au">
-              <input type="hidden" name="lc" value="AU">
-              <input type="hidden" name="item_name" value="Regular User">
-              <input type="hidden" name="amount" value="0.40">
-              <input type="hidden" name="currency_code" value="USD">
-              <input type="hidden" name="button_subtype" value="services">
-              <input type="hidden" name="no_note" value="0">
-              <input type="hidden" name="shipping" value="0.00">
-              <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
-              <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-              <img alt="" border="0" src="https://www.paypalobjects.com/en_AU/i/scr/pixel.gif" width="1" height="1">
-            </form>
-
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  <%= render 'package_plans/new' %>
 </div>
 <hr>
 
