enteries controller removed

--- a/app/views/home/entries.html.erb
+++ b/app/views/home/entries.html.erb
@@ -3,7 +3,7 @@
     <div class="jumbotron">
       <div class="row">
         <div class="col-12 upper-img">
-<!--          <img src="slide_02.jpg" class="img-responsive">-->
+          <!--          <img src="slide_02.jpg" class="img-responsive">-->
           <%= image_tag 'slide_01.jpg', class: "img-responsive"%>
         </div>
       </div>
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-12 mid-data">
       <h2>
-<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <!--        <img src="pencil-60-119100.png" class="mid-icons">-->
         <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
         No Contracts
       </h2>
@@ -39,7 +39,7 @@
     </div>
     <div class="col-lg-3 col-md-6 col-12 mid-data">
       <h2>
-<!--        <img src="pencil-60-119100.png" class="mid-icons"> -->
+        <!--        <img src="pencil-60-119100.png" class="mid-icons"> -->
         <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
         Secure
       </h2>
@@ -48,7 +48,7 @@
     </div>
     <div class="col-lg-3 col-md-6 col-12 mid-data">
       <h2>
-<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <!--        <img src="pencil-60-119100.png" class="mid-icons">-->
         <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
         Personal
       </h2>
@@ -58,7 +58,7 @@
     <div class="col-lg-3 col-md-6 col-12 mid-data">
 
       <h2>
-<!--        <img src="pencil-60-119100.png" class="mid-icons">-->
+        <!--        <img src="pencil-60-119100.png" class="mid-icons">-->
         <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
         Professional
       </h2>
@@ -74,7 +74,7 @@
     </div>
   </div>
   <hr>
-  <%= render 'package_plans/new' %>
+  <%= render 'package_plans/package' %>
 </div>
 <hr>
 
