--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item">
 <!--          <a class="nav-link meun" href="#" style="color:white !important;">GAME ENTRY</a>-->
-          <%= link_to "GAME ENTRY", entries_index_path, class: "nav-link meun", style:"color:white !important;" %>
+          <%= link_to "GAME ENTRY", entries_path, class: "nav-link meun", style:"color:white !important;" %>
         </li>
         <li class="nav-item">
 <!--          <a class="nav-link meun" href="#" style="color:white !important;">GAME MASTER</a>-->
