--- a/app/views/home/entries.html.erb
+++ b/app/views/home/entries.html.erb
@@ -83,9 +83,9 @@
     <div class="tp--mid">
       <h1 class="contact">Contact Us</h1>
       <br>
-      <h3 class="mail">GamesDirector@strippals.com</h3>
-      <h3 class="mail">admin@strippals.com</h3>
-      <h3 class="mail">help@strippals.com</h3>
+      <a href="mailto:GamesDirector@strippals.com" class="mail">GamesDirector@strippals.com</a><br>
+      <a href="mailto:admin@strippals.com" class="mail">admin@strippals.com</a><br>
+      <a href="mailto:help@strippals.com" class="mail">help@strippals.com</a>
     </div>
   </div>
 </div>
