--- a/app/assets/stylesheets/package_plans.scss
+++ b/app/assets/stylesheets/package_plans.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the PackagePlans controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.package
+{
+  justify-content: center;
+}
