--- a/app/views/package_plans/_package.html.erb
+++ b/app/views/package_plans/_package.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row package">
   <% @packages.each do |pack|%>
     <div class="col-lg-3 col-md-6 col-12 data-panels">
     <div class="card <%= if pack.game.gamename == 'Ace Of Spades'
@@ -25,8 +25,8 @@
           <strong>US$<%= pack.amount %></strong>
         </li>
         <li class="list-group-item">
-          <%= link_to 'Accept', {:controller => "subcriptions", :action => "new", :package_plan_id => pack.id}, :method => :get %>
-          <%#= link_to  image_tag('btn_buynowCC_LG.gif'), create_path(:package_plan_id => pack.id), package: pack, :method => :post %>
+          <%#= link_to 'Accept', {:controller => "subcriptions", :action => "new", :package_plan_id => pack.id}, :method => :get %>
+          <%= link_to  image_tag('btn_buynowCC_LG.gif'), create_path(:package_plan_id => pack.id), package: pack, :method => :post %>
           <%#= link_to "Link text", create_path(:package_plan_id => pack.id, :package_name => pack.game.gamename), package: pack, :method => :post %>
         </li>
       </ul>
