game working and master links working

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item">
 <!--          <a class="nav-link meun" href="#" style="color:white !important;">GAME MASTER</a>-->
-          <%= link_to "GAMES MASTER", games_master_index_path, class: "nav-link meun", style:"color:white !important;" %>
+          <%= link_to "GAMES MASTER",  mastergame_path, class: "nav-link meun", style:"color:white !important;" %>
         </li>
 
 
