games_controller deleted added to the home controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,7 +134,7 @@
                         play for commodities, this is how it was played some 200 years ago.
                         If you wish to learn of other modes to play please contact us.</p>
 <!--                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>-->
-                        <%= link_to "Games Master:", games_master_index_path, style: 'color:#F07C00' %>
+                        <%= link_to "Games Master:", mastergame_path, style: 'color:#F07C00' %>
                     </div>
                   </div>
                 </div>
@@ -153,7 +153,7 @@
                       <p style=" color: gray;">For as little as 2c a minute with the total game cost about 20c, players
                         can be assured of getting value for money.</p>
 <!--                      <a href="#" target="_blank" style="color:#F07C00;">ENTER HERE</a>-->
-                          <%=link_to "ENTER HERE", games_master_index_path, style: "color:#F07C00;", target: :_blank %>
+                          <%=link_to "ENTER HERE", mastergame_path, style: "color:#F07C00;", target: :_blank %>
                     </div>
                   </div>
                 </div>
