change text pricing table

--- a/app/views/home/entries.html.erb
+++ b/app/views/home/entries.html.erb
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="col-12 line--style">
       <h1 style="font-family: 'Acme', sans-serif;">Pricing Table -
-        <em style="color: #F01215; font-size: 24px; text-align: center;">Please choose a playing mode keeping in mind a game can take between 3 to 15 mins to finish.</em>
+        <em style="color: #F01215; font-size: 24px; text-align: center;">As a special introductory offer players can play 5 games for US0.50!!!.</em>
       </h1>
     </div>
   </div>
