everything is working now mails, payment, creating user

--- a/app/views/user_mailer/mail_account.html.erb
+++ b/app/views/user_mailer/mail_account.html.erb
@@ -1,2 +1,2 @@
-<%= @user.email %>
-<%= @pass %>
+<h1>Thank for purchasing our package your email :</h1><h2><%= @user.email %></h2>
+<h1>Thank for purchasing our package your email :</h1><h2><%= @pass %></h2>
