--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,7 +6,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <!-- Links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+  <div class="collapse navbar-collapse navs-items" id="collapsibleNavbar">
     <div class="item">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -34,6 +34,11 @@
           <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, class: "nav-link meun", style:"color:white !important;", method: :delete %>
           </li>
+          <% if current_user.has_role? :admin%>
+            <li class="nav-item">
+              <%= link_to "Admin Panel", admin_users_path, class: "nav-link meun", style:"color:white !important;"%>
+            </li>
+          <% end %>
         <% else %>
           <li class="nav-item">
             <%= link_to "Login", new_user_session_path, class: "nav-link meun", style:"color:white !important;" %>
