--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
   <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <%= favicon_link_tag asset_path('home-favicon.ico'), :rel => 'icon', :type => "image/x-icon" %>
 	<%= stylesheet_link_tag    'application', media: 'all' %>
 	<%= javascript_include_tag 'application' %>
-  <%= image_tag('home-favicon.ico')%>
+  <%#= image_tag('home-favicon.ico')%>
 </head>
 
 <body >
