mail set final testing done

--- a/app/views/user_mailer/mail_account.html.erb
+++ b/app/views/user_mailer/mail_account.html.erb
@@ -1,2 +1,3 @@
-<h1>Thank for purchasing our package your email :</h1><h2><%= @user.email %></h2>
-<h1>Thank for purchasing our package your email :</h1><h2><%= @pass %></h2>
+<h1>Thank for purchasing our package your credentials :</h1>
+<h2>Email: <%= @user.email %></h2>
+<h2>Password: <%= @pass %></h2>
