--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
       </div>
       <div class="description--for-card">
         <p>Watch how to play the app video here. The video tells of the origin of this 200 year old game. It is s free
-          app catering for all plateforms.
+          app catering for all plate forms.
         </p>
       </div>
 
@@ -83,7 +83,7 @@
       </div>
       <div class="description--for-card">
         <p>Every player enters this sit MUST read and ACKNOWLEDGE the terms and conditions. Any breach of these
-          conditions will result in disiplinary action.
+          conditions will result in disciplinary action.
         </p>
       </div>
       <%= link_to image_url('Terms.pdf'), style: 'color: white' do %>
@@ -148,7 +148,7 @@
                       <h3 class="first-tab-header">USER PAY SITE</h3>
                       <p style="font-family: 'Eras Demi ITC'; color: gray;">To be fair to all players this is a user pay
                         site - that is the more you use the site the less it will cost you.
-                        While every endeavour is made to accommodate players of all interests it is reccommended that
+                        While every endeavour is made to accommodate players of all interests it is recommended that
                         players stay within their budget and do not over spend. </p>
                       <p style=" color: gray;">For as little as 2c a minute with the total game cost about 20c, players
                         can be assured of getting value for money.</p>
