--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 <!--landing image end-->
 <!--center div-->
 <div class="center">
-  <h3 class="text1">Welcome to strip pals!</h3>
+  <h3 class="text1">Welcome to Strip Pals!</h3>
   <h3 class="text2">- A Strip Poker site for AMATEURS -</h3>
 </div>
 <!--center div end-->
