--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,35 +1,39 @@
-<%= devise_error_messages! %>
+<div class="container">
+
+    <%= devise_error_messages! %>
 
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put,class: 'form-horizontal' }) do |f| %>
-<%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put,class: 'form-horizontal' }) do |f| %>
+    <%= f.hidden_field :reset_password_token %>
 
-<fieldset>
-  <legend>Change your password</legend>
+    <fieldset>
+      <legend>Change your password</legend>
 
 
-<div class="form-group">
-  <%= f.label :password,  "New password" ,class: 'col-lg-2 control-label' %>
-  <div class="col-lg-4">
-    <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em> <% end %>
-  </div>
-</div>
-
-<div class="form-group">
-  <%= f.label :password_confirmation, "Confirm new password", class: 'col-lg-2 control-label' %>
-  <div class="col-lg-4">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
-  </div>
-</div>
-
-  <div class="form-group">
-    <div class="col-lg-10 col-lg-offset-2">
-      <%= f.submit "Change Password", class: 'btn btn-primary' %>   
+    <div class="form-group">
+      <%= f.label :password,  "New password" ,class: 'col-lg-2 control-label' %>
+      <div class="col-lg-4">
+        <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em> <% end %>
+      </div>
     </div>
-  </div>
 
-</fieldset>
-<% end %>
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Confirm new password", class: 'col-lg-4 control-label' %>
+      <div class="col-lg-4">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+      <div class="form-group">
+        <div class="col-lg-10 col-lg-offset-2">
+          <%= f.submit "Change Password", class: 'btn btn-primary' %>
+        </div>
+      </div>
+
+    </fieldset>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+
+</div>
