--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,27 +1,34 @@
-<%= devise_error_messages! %>
+<div class="container">
+  <%= devise_error_messages! %>
 
-<%= form_for(@user, url: {controller: 'passwords', action: 'new_password'}, html: { method: :get, class: 'form-horizontal' }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 
-<fieldset>
-  <legend>Forgot your password ?</legend>
+  <fieldset>
+    <legend>Forgot your password ?</legend>
 
 
 
-  <div class="form-group">
-    <%= f.label :email, class: 'col-lg-2 control-label' %>
-    <div class="col-lg-4">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", size: 10, class: "form-control" %>
+    <div class="form-group">
+      <%= f.label :email, class: 'col-lg-2 control-label' %>
+      <div class="col-lg-4">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", size: 10, class: "form-control" %>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <div class="col-lg-10 col-lg-offset-2">
-      <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
+    <div class="form-group">
+      <div class="col-lg-10 col-lg-offset-2">
+        <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
+      </div>
     </div>
-  </div>
 
 
-</fieldset>
-<% end %>
+  </fieldset>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
+
+
+
+
+
