--- a/app/views/devise/passwords/new_password.html.erb
+++ b/app/views/devise/passwords/new_password.html.erb
@@ -1,35 +1,37 @@
-<%= devise_error_messages! %>
+<div class="container">
+    <%= devise_error_messages! %>
 
 
-<%= form_for(@user, url: { controller: "passwords", action: "update_password" }, html: { method: :get, class: 'form-horizontal' } ) do |f| %>
-  <%= f.hidden_field :reset_password_token %>
-  <%= f.hidden_field :user_id, value: @user.id %>
-  <fieldset>
-    <legend>Change your password</legend>
+    <%= form_for(@user, url: { controller: "passwords", action: "update_password" }, html: { method: :get, class: 'form-horizontal' } ) do |f| %>
+      <%= f.hidden_field :reset_password_token %>
+      <%= f.hidden_field :user_id, value: @user.id %>
+      <fieldset>
+        <legend>Change your password</legend>
 
 
-    <div class="form-group">
-      <%= f.label :password,  "New password" ,class: 'col-lg-2 control-label' %>
-      <div class="col-lg-4">
-        <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
-          <em>6 characters minimum</em> <% end %>
-      </div>
-    </div>
+        <div class="form-group">
+          <%= f.label :password,  "New password" ,class: 'col-lg-2 control-label' %>
+          <div class="col-lg-4">
+            <%= f.password_field :password, autocomplete: "new-password", size: 25, class: "form-control" %> <% if @minimum_password_length %>
+              <em>6 characters minimum</em> <% end %>
+          </div>
+        </div>
 
-    <div class="form-group">
-      <%= f.label :password_confirmation, "Confirm new password", class: 'col-lg-2 control-label' %>
-      <div class="col-lg-4">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
-      </div>
-    </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation, "Confirm new password", class: 'col-lg-4 control-label' %>
+          <div class="col-lg-4">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 25, class: "form-control" %>
+          </div>
+        </div>
 
-    <div class="form-group">
-      <div class="col-lg-10 col-lg-offset-2">
-        <%= f.submit "Change Password", class: 'btn btn-primary' %>
-      </div>
-    </div>
+        <div class="form-group">
+          <div class="col-lg-10 col-lg-offset-2">
+            <%= f.submit "Change Password", class: 'btn btn-primary' %>
+          </div>
+        </div>
 
-  </fieldset>
-<% end %>
+      </fieldset>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+</div>
