--- a/app/views/package_plans/_package.html.erb
+++ b/app/views/package_plans/_package.html.erb
@@ -26,8 +26,12 @@
         </li>
         <li class="list-group-item">
           <%#= link_to 'Accept', {:controller => "subcriptions", :action => "new", :package_plan_id => pack.id}, :method => :get %>
-          <%= link_to  image_tag('btn_buynowCC_LG.gif'), create_path(:package_plan_id => pack.id), package: pack, :method => :post %>
+          <%#= link_to  image_tag('btn_buynowCC_LG.gif'), create_path(:package_plan_id => pack.id), package: pack, :method => :post, turbolinks: false %>
           <%#= link_to "Link text", create_path(:package_plan_id => pack.id, :package_name => pack.game.gamename), package: pack, :method => :post %>
+          <%#= link_to  image_tag('btn_buynowCC_LG.gif'), create_path(pack.id, :package_plan_id => pack.id), method: :post %>
+<%= button_to  create_path(pack, package_plan_id: pack.id) do%>
+          <%= image_tag('btn_buynowCC_LG.gif') %>
+          <%end %>
         </li>
       </ul>
     </div>
